# CRRCsim

./: .gitignore  CLAUDE.md  CMakeLists.txt  HISTORY  Makefile.am  Makefile.in  README.md  TUNING_CORRECTION.md  TUNING_SUMMARY.md  aclocal.m4  autoc-config.xml  autoc_config-eval.xml  autoc_config.xml  configure  configure.ac  crrc_config.h.in  valgrind-graphics.supp
documentation/: Makefile.am  Makefile.in  compile.txt  control.txt  index.html  release.txt
documentation/file_format/: Makefile.am  Makefile.in  airplane02.html  heli01.html  scenery03.html
documentation/howto_create_models/: Makefile.in
documentation/input_method/: Makefile.am  Makefile.in
documentation/input_method/AUTOC/: Makefile.am  Makefile.in  autoc.txt  autopilot.txt
documentation/input_method/CT6A/: Makefile.in
documentation/input_method/MNAV/: Makefile.in
documentation/input_method/PARALLEL_1_to_3/: Makefile.in
documentation/input_method/RCTRAN/: Makefile.in
documentation/input_method/SERIAL2/: Makefile.in
documentation/man/: Makefile.in  crrcsim.1
documentation/models/: Makefile.am  Makefile.in
documentation/power_propulsion/: Makefile.in  power_propulsion.html
documentation/record_playback/: Makefile.am  Makefile.in
documentation/thermals/: Makefile.in
locale/: Makefile.in
models/: Angel_S30E.xml  Generic_F3F.xml  Makefile.am  Makefile.in  hb1.xml  hb1_streamer.xml  quickie01.xml  wasabi.xml
models/battery/: Makefile.am  Makefile.in  lipo3s_2200.xml  lipo3s_3300.xml  lipo4s_2200.xml
models/engine/: Hacker_A30_14L.xml  Makefile.am  Makefile.in
objects/: Angel_S30E.ac  Crossfire.ac  Erwin.ac  Fireworks_C.ac  Makefile.am  Makefile.in  PilatusB4.ac  Skorpion.ac  allegro.ac  apogee.ac  biplane2.ac  cape_cod.ac  copter3.ac  copter5.ac  davis.ac  flexifly_xlm.ac  freqboard.ac  gap65.ac  gap65_raven.ac  heli.ac  hut.ac  k2.ac  mav.ac  melyan_01.ac  outhouse.ac  outrage.ac  populus_nigra_H.ac  populus_nigra_L.ac  qc01.ac  qc01_x.ac  quickie01.ac  small.ac  sovereign.ac  sport.ac  supra.ac  table.ac  wasabi_wr.ac  wasabi_yr.ac  woods_terrain.ac  zagi-xs.ac  (+2 more)
scenery/: Makefile.am  Makefile.in  cape_cod-orig.xml  cape_cod.xml  davis-orig.xml  davis.xml  simple.xml  simple_woods.xml
sounds/: Makefile.in
src/: CTime.cpp  CTime.h  ImageLoaderTGA.cpp  SimStateHandler.cpp  SimStateHandler.h  aircraft.cpp  config.cpp  config.h  crrc_keyboard.cpp  crrc_loadair.cpp  crrc_loadair.h  crrc_main.cpp  crrc_system.cpp  defines.h  global.cpp  global.h  global_video.h  include_gl.h  mod_fdm_config.h  mouse_kbd.cpp  record.cpp  robots.cpp  zoom.cpp  zoom.h
src/mod_inputdev/: CMakeLists.txt  inputdev.cpp  inputdev.h
src/mod_inputdev/inputdev_audio/: inputdev_audio.cpp  inputdev_audio.h
src/mod_inputdev/inputdev_autoc/: autoc.cpp  autoc.h  crrcsim_tracker_helper.cpp  crrcsim_tracker_helper.h  inputdev_autoc.cpp  inputdev_autoc.h
src/mod_inputdev/inputdev_mnav/: inputdev_mnav.cpp
src/mod_inputdev/inputdev_parallel/: inputdev_parallel.cpp
src/mod_inputdev/inputdev_rctran2/: inputdev_rctran2.cpp
src/mod_math/: CMakeLists.txt  m44_test.cpp  matrix33.h  matrix44.h  quat_test.cpp  quaternion.cpp  vector3.h
textures/: Makefile.am  Makefile.in  angel_s30e.rgb  flexifly_xlm.rgb  populus_nigra_H.rgb  populus_nigra_L.rgb  shadow.rgb  skybox_u.rgb  zagi-xs-texture.rgb
(+92 files in other folders)
