# Makefile.am for "/documentation"

SUBDIRS = file_format howto_create_models input_method man models power_propulsion record_playback thermals

pkgdatadir = $(docdir)

pkgdata_DATA  = compile.txt controller.html control.txt coordinate.txt \
                davis.jpg dlportio.txt dynamic_soaring.txt index.html \
                Install_Linux.txt Install_Win32.txt loading_files.txt \
                non_SI_units.txt options.txt README release.txt \
                translation.html windfield.txt


EXTRA_DIST = $(pkgdata_DATA)

