# Makefile.am for "/objects"

objectdir = $(datadir)/@PACKAGE@/objects

object_DATA  = allegro.ac Angel_S30E.ac apogee.ac biplane2.ac cape_cod.ac \
               copter3.ac copter5.ac Crossfire.ac davis.ac Erwin.ac \
               Fireworks_C.ac flexifly_xlm.ac freqboard.ac gap65.ac \
               gap65_raven.ac heli.ac hut.ac k2.ac log.ac mav.ac \
               melyan_01.ac populus_nigra_H.ac populus_nigra_L.ac \
               outhouse.ac outrage.ac PilatusB4.ac PilatusB4_26.ac \
               qc01.ac qc01_x.ac quickie01.ac Skorpion.ac \
               small.ac sovereign.ac sport.ac supra.ac table.ac trashcan.ac \
               wasabi_wr.ac wasabi_yr.ac woods_terrain.ac \
               zagi.ac zagi-xs.ac zipper.ac

EXTRA_DIST = $(object_DATA)
